--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -1,7 +1,7 @@
-<!-- Title: register.html
+<!-- Title: appointment.html
   Author: April Yang
-  Date: 07/07/2022
-  Description: Sign up page of Pets-R-Us site.  -->
+  Date: 07/14/2022
+  Description: Appointment page of Pets-R-Us site.  -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -22,14 +22,28 @@
         <h1 class="card-title"><%= cardTitle %></h1>
         <div class="card-content signUpContent">
           <div class="form">
-            <form action="/register" method="post">
+            <form action="/appointment" method="post">
               <div class="form-field">
-                <label for="username" class="labelSignUp">Username</label><br />
+                <label for="firstName" class="labelSignUp">First name</label
+                ><br />
                 <input
                   type="text"
                   class="inputSignUp"
-                  name="username"
-                  id="username"
+                  name="firstName"
+                  id="firstName"
+                  required
+                  autofocus
+                />
+              </div>
+
+              <div class="form-field">
+                <label for="lastName" class="labelSignUp">Last name</label
+                ><br />
+                <input
+                  type="text"
+                  class="inputSignUp"
+                  name="lastName"
+                  id="lastName"
                   required
                   autofocus
                 />
@@ -48,59 +62,30 @@
               </div>
 
               <div class="form-field">
-                <label for="password" class="labelSignUp">Password</label><br />
-                <input
-                  type="password"
-                  class="inputSignUp"
-                  name="password"
-                  id="password"
-                  required
-                />
+                <label for="service" class="labelSignUp">Services</label><br />
+                <select
+                  name="services"
+                  id="services"
+                  class="drop-down-menu full-width inputSignUp"
+                >
+                  <option value="grooming">Grooming</option>
+
+                  <option value="boarding">Boarding</option>
+
+                  <option value="training">Training</option>
+                </select>
               </div>
 
               <div class="form-field">
                 <input
                   type="submit"
-                  value="Register"
+                  value="Request appointment"
                   class="btn btn-primary full-width btnR"
                   style="margin-bottom: 100px"
                 />
               </div>
             </form>
           </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- display user list after user sign up  -->
-    <section class="container signUpContainer" style="margin-bottom: 300px">
-      <div class="card center-div">
-        <h1 class="card-title">User List</h1>
-
-        <div class="card-content signUpContent">
-          <!-- loop over every user sign in with username, email, and createdAt -->
-          <% if(users.length > 0) { %>
-          <table class="table">
-            <tr>
-              <th>Username</th>
-              <th>Email</th>
-              <th>Created at</th>
-            </tr>
-            <tbody>
-              <% users.forEach(function(user) { %>
-              <tr>
-                <td><%= user.username %></td>
-                <td><%= user.email %></td>
-                <td><%= moment(user.createdAt).format('MM-DD-YYYY') %></td>
-              </tr>
-              <% }) %>
-            </tbody>
-          </table>
-          <% } else { %>
-          <h3>
-            Users have not been added to the MongoDB database. Try adding some!
-          </h3>
-          <% } %>
         </div>
       </div>
     </section>
