--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -68,11 +68,11 @@
                   id="services"
                   class="drop-down-menu full-width inputSignUp"
                 >
-                  <option value="grooming">Grooming</option>
-
-                  <option value="boarding">Boarding</option>
-
-                  <option value="training">Training</option>
+                  <% services.forEach((service) =>{ %>
+                  <option value="<%= service.value%>">
+                    <%= service.text %>
+                  </option>
+                  <% }) %>
                 </select>
               </div>
 
@@ -86,6 +86,36 @@
               </div>
             </form>
           </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- display the list of my appointments  -->
+    <section class="container signUpContainer" style="margin-bottom: 300px">
+      <div class="card center-div">
+        <h1 class="card-title">My Appointments</h1>
+
+        <div class="card-content signUpContent">
+          <!-- loop over every appointment with first name, last name, email , and service -->
+          <% if(appointments.length > 0) { %>
+          <table class="table">
+            <tr>
+              <th>First Name</th>
+              <th>Last Name</th>
+              <th>Email</th>
+              <th>Service</th>
+            </tr>
+            <tbody>
+              <% appointments.forEach(function(appointment) { %>
+              <tr>
+                <td><%= appointment.firstName %></td>
+                <td><%= appointment.lastName %></td>
+                <td><%= appointment.email %></td>
+                <td><%= appointment.service %></td>
+              </tr>
+              <% }) %>
+            </tbody>
+          </table>
         </div>
       </div>
     </section>
